# Hackathon-ll

Hackathon-2/: CLAUDE.md
Hackathon-2/Hackathon-ll-phase-l/: README.md  pyproject.toml
Hackathon-2/Hackathon-ll-phase-l/src/todo_app/cli/: cli.py
Hackathon-2/Hackathon-ll-phase-l/src/todo_app/models/: todo.py
Hackathon-2/Hackathon-ll-phase-l/src/todo_app/services/: todo_service.py
Hackathon-2/Hackathon-ll-phase-l/src/todo_app/utils/: validators.py
Hackathon-2/Hackathon-ll-phase-l/tests/: conftest.py
Hackathon-2/Hackathon-ll-phase-l/tests/test_cli/: test_cli.py  test_integration.py
Hackathon-2/Hackathon-ll-phase-l/tests/test_models/: test_todo.py
Hackathon-2/Hackathon-ll-phase-l/tests/test_services/: test_delete_todo.py  test_get_todos.py  test_mark_complete.py  test_todo_service.py  test_update_todo.py
Hackathon-2/history/prompts/001-console-todo/: 1-create-spec.spec.prompt.md  2-create-plan.plan.prompt.md  3-create-tasks.tasks.prompt.md  4-implementation-complete.implementation.prompt.md
Hackathon-2/history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md
Hackathon-2/specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Hackathon-2/specs/001-console-todo/checklists/: requirements.md
Hackathon-2/specs/001-console-todo/contracts/: todo-api-contract.md
