[project]
name = "todo-app"
version = "0.1.0"
description = "In-memory console todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]